--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans:400,700" rel="stylesheet">
-    <!-- <script src="main.js"></script> -->
 </head>
 
 
@@ -61,7 +60,7 @@
                 <div class="app-screen-chat">
                     <img class="active" src="images/IronManAvatar59.png" alt="Iron man avatar">
                     <div class="app-screen-chat-texts">
-                        <p class="app-screen-chat-name">Iron man</p>
+                        <p class="app-screen-chat-name">Iron man<span><i class="fas fa-circle"></i></span></p>
                         <p class="app-screen-chat-time">10:45am</p>
                         <p class="app-screen-chat-message">Bro where were you last night? <br>text me when you see...</p>
                     </div>
@@ -69,7 +68,7 @@
                 <div class="app-screen-chat">
                     <img class="active" src="images/CapiatinAvatar59.png" alt="Capitain America avatar">
                     <div class="app-screen-chat-texts">
-                        <p class="app-screen-chat-name">Capitain America</p>
+                        <p class="app-screen-chat-name">Capitain America<span><i class="fas fa-circle"></i></span></p>
                         <p class="app-screen-chat-time">09:20am</p>
                         <p class="app-screen-chat-message">Hey dude! We could sure do with<br>some back up if...</p>
                     </div>
