--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="concept">
     <header>
-        <h1>[Dribble] SONO - Messaging App Concept</h1>
+        <h1>[Dribbble] SONO - Messaging App Concept</h1>
     </header>
     <main class="app">
         <section class="app-screen loginScreen">
